feat: add mac support, but still have a bug about aapt command which i can't get the output message where using Runtime.getRuntime.exec I have try 1. redirect 2. write a script 3. use xargs or awk I will try [1. try using apktools to do the same thing] tomorrow and the day after tomorrow